--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "libopencm3"]
 	path = libopencm3
 	url = https://github.com/libopencm3/libopencm3
+[submodule "libcanard"]
+	path = libcanard
+	url = https://github.com/UAVCAN/libcanard
+	branch = legacy-v0
