main: add extern void usleep() needed by canard.c

--- a/wave-canard/Makefile
+++ b/wave-canard/Makefile
@@ -4,6 +4,7 @@ BUILD_DIR = bin
 SHARED_DIR = ../libcanard
 CFILES = main.c
 CFILES += canard.c
+CFILES += drivers/stm32/canard_stm32.c
 
 # TODO - you will need to edit these two lines!
 DEVICE=stm32f103c8
